<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Link Tester</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_signout">Sign out</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_show_location">Show Your Location</string>
    <string name="action_clear_links">Clear Links</string>
    <string name="header_ada">ADA</string>
    <string name="header_jarvis">Jarvis</string>
    <string name="header_portal_keys">Portal Keys</string>
    <string name="header_total">Total</string>
    <string name="header_common">C</string>
    <string name="header_rare">R</string>
    <string name="header_very_rare">VR</string>
    <string name="action_clear_database">Clear Database</string>
    <string name="ic_action_link_title">Link</string>
    <string name="ic_action_delete_title">Delete Portal</string>
    <string name="ic_action_shortest_path">Shortest Path</string>
    <string name="ic_action_maps">Show in Maps</string>

</resources>
