<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/ic_action_link"
        android:icon="@drawable/ic_action_link"
        android:title="@string/ic_action_link_title"
        android:showAsAction="always"/>

    <item
        android:id="@+id/ic_action_maps"
        android:icon="@drawable/ic_action_maps"
        android:title="@string/ic_action_maps"
        android:showAsAction="always"/>

    <item
        android:id="@+id/ic_action_shortest_path"
        android:icon="@drawable/ic_action_shortest_path"
        android:title="@string/ic_action_shortest_path"
        android:showAsAction="always"/>

    <item
        android:id="@+id/ic_portal_delete"
        android:icon="@drawable/ic_portal_delete"
        android:title="@string/ic_action_delete_title"
        android:showAsAction="never"/>

</menu>